project(homework2_iterators)

add_executable(filter_integer_iterator main/filter_integer_iterator.cpp)
add_executable(reverse_array_iterator main/reverse_array_iterator.cpp)
add_executable(circular_int_iterator main/circular_int_iterator.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/iterators)
